Fix uneven widths

--- a/src/containers/Settings/Settings.scss
+++ b/src/containers/Settings/Settings.scss
@@ -92,6 +92,7 @@
 
       > span {
         display: flex;
+        width: 46px;
         align-items: center;
         padding: 10px;
         margin-right: 20px;
